# freertos-httpd

./: .gitignore  .gitmodules  CMakeLists.txt  FSM.md  FreeRTOSConfig.h  FreeRTOSConfig.h.carlandme  FreeRTOSConfig.h.old  README.md  adc.h  architecture.drawio  components.drawio  configure.html  culinary.html  dash1.html  dashboard.html  data_logger.c  data_logger.c.SDIO  data_logger.h  fs_ext.c  fs_ext.new.c  fsm.json  httpd_opts.h  hw_config.c  idb_config.h  idb_data_logger.c  idb_fsm.c  idb_fsm.h  idb_hardware.c  idb_hardware.h  idb_http.c  idb_http.h  idb_http_client.c  idb_http_client.h  idb_ini.c  idb_ini.h  idb_main.c  idb_network.c  idb_network.h  idb_ntp_client.c  idb_ntp_client.h  (+28 more)
unused/: fs_ext_sdio.c  hw_config_sdio.c  idb_http_client.c  test.html  testRoutes.cpp
